option java_package = "org.apache.hadoop.yarn.proto";
option java_outer_classname = "AMRMProtocol";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

import "yarn_service_protos.proto";


service AMRMProtocolService {
  rpc registerApplicationMaster (RegisterApplicationMasterRequestProto) returns (RegisterApplicationMasterResponseProto);
  rpc finishApplicationMaster (FinishApplicationMasterRequestProto) returns (FinishApplicationMasterResponseProto);
  rpc allocate (AllocateRequestProto) returns (AllocateResponseProto);
}
