begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/*  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.yarn.service
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|service
package|;
end_package

begin_import
import|import
name|com
operator|.
name|google
operator|.
name|common
operator|.
name|base
operator|.
name|Supplier
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|fs
operator|.
name|Path
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|registry
operator|.
name|client
operator|.
name|api
operator|.
name|RegistryOperations
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|test
operator|.
name|GenericTestUtils
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|protocolrecords
operator|.
name|AllocateResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|protocolrecords
operator|.
name|RegisterApplicationMasterResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|ApplicationAttemptId
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|ApplicationId
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|Container
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|ContainerId
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|FinalApplicationStatus
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|NodeId
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|Priority
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|Resource
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|client
operator|.
name|api
operator|.
name|AMRMClient
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|client
operator|.
name|api
operator|.
name|NMClient
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|client
operator|.
name|api
operator|.
name|async
operator|.
name|AMRMClientAsync
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|client
operator|.
name|api
operator|.
name|async
operator|.
name|NMClientAsync
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|client
operator|.
name|api
operator|.
name|impl
operator|.
name|AMRMClientImpl
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|exceptions
operator|.
name|YarnException
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|ClientAMProtocol
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|service
operator|.
name|api
operator|.
name|records
operator|.
name|Application
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|service
operator|.
name|component
operator|.
name|Component
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|service
operator|.
name|component
operator|.
name|ComponentState
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|service
operator|.
name|exceptions
operator|.
name|BadClusterStateException
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|service
operator|.
name|registry
operator|.
name|YarnRegistryViewForProviders
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|service
operator|.
name|utils
operator|.
name|SliderFileSystem
import|;
end_import

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|IOException
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|Collections
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|Iterator
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|LinkedList
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|List
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|concurrent
operator|.
name|TimeoutException
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|mockito
operator|.
name|Mockito
operator|.
name|mock
import|;
end_import

begin_class
DECL|class|MockServiceAM
specifier|public
class|class
name|MockServiceAM
extends|extends
name|ServiceMaster
block|{
DECL|field|application
name|Application
name|application
decl_stmt|;
comment|// The list of containers fed by tests to be returned on
comment|// AMRMClientCallBackHandler#onContainersAllocated
DECL|field|feedContainers
specifier|final
name|List
argument_list|<
name|Container
argument_list|>
name|feedContainers
init|=
name|Collections
operator|.
name|synchronizedList
argument_list|(
operator|new
name|LinkedList
argument_list|<>
argument_list|()
argument_list|)
decl_stmt|;
DECL|method|MockServiceAM (Application application)
specifier|public
name|MockServiceAM
parameter_list|(
name|Application
name|application
parameter_list|)
block|{
name|super
argument_list|(
name|application
operator|.
name|getName
argument_list|()
argument_list|)
expr_stmt|;
name|this
operator|.
name|application
operator|=
name|application
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|getAMContainerId ()
specifier|protected
name|ContainerId
name|getAMContainerId
parameter_list|()
throws|throws
name|BadClusterStateException
block|{
return|return
name|ContainerId
operator|.
name|newContainerId
argument_list|(
name|ApplicationAttemptId
operator|.
name|newInstance
argument_list|(
name|ApplicationId
operator|.
name|fromString
argument_list|(
name|application
operator|.
name|getId
argument_list|()
argument_list|)
argument_list|,
literal|1
argument_list|)
argument_list|,
literal|1
argument_list|)
return|;
block|}
annotation|@
name|Override
DECL|method|getAppDir ()
specifier|protected
name|Path
name|getAppDir
parameter_list|()
block|{
name|Path
name|path
init|=
operator|new
name|Path
argument_list|(
operator|new
name|Path
argument_list|(
literal|"target"
argument_list|,
literal|"apps"
argument_list|)
argument_list|,
name|application
operator|.
name|getName
argument_list|()
argument_list|)
decl_stmt|;
name|System
operator|.
name|out
operator|.
name|println
argument_list|(
literal|"Application path: "
operator|+
name|path
argument_list|)
expr_stmt|;
return|return
name|path
return|;
block|}
annotation|@
name|Override
DECL|method|createServiceScheduler (ServiceContext context)
specifier|protected
name|ServiceScheduler
name|createServiceScheduler
parameter_list|(
name|ServiceContext
name|context
parameter_list|)
throws|throws
name|IOException
throws|,
name|YarnException
block|{
return|return
operator|new
name|ServiceScheduler
argument_list|(
name|context
argument_list|)
block|{
annotation|@
name|Override
specifier|protected
name|YarnRegistryViewForProviders
name|createYarnRegistryOperations
parameter_list|(
name|ServiceContext
name|context
parameter_list|,
name|RegistryOperations
name|registryClient
parameter_list|)
block|{
return|return
name|mock
argument_list|(
name|YarnRegistryViewForProviders
operator|.
name|class
argument_list|)
return|;
block|}
annotation|@
name|Override
specifier|protected
name|AMRMClientAsync
argument_list|<
name|AMRMClient
operator|.
name|ContainerRequest
argument_list|>
name|createAMRMClient
parameter_list|()
block|{
name|AMRMClientImpl
name|client1
init|=
operator|new
name|AMRMClientImpl
argument_list|()
block|{
annotation|@
name|Override
specifier|public
name|AllocateResponse
name|allocate
parameter_list|(
name|float
name|progressIndicator
parameter_list|)
throws|throws
name|YarnException
throws|,
name|IOException
block|{
name|AllocateResponse
operator|.
name|AllocateResponseBuilder
name|builder
init|=
name|AllocateResponse
operator|.
name|newBuilder
argument_list|()
decl_stmt|;
synchronized|synchronized
init|(
name|feedContainers
init|)
block|{
if|if
condition|(
name|feedContainers
operator|.
name|isEmpty
argument_list|()
condition|)
block|{
name|System
operator|.
name|out
operator|.
name|println
argument_list|(
literal|"Allocating........ no containers"
argument_list|)
expr_stmt|;
return|return
name|builder
operator|.
name|build
argument_list|()
return|;
block|}
else|else
block|{
comment|// The AMRMClient will return containers for compoenent that are
comment|// at FLEXING state
name|List
argument_list|<
name|Container
argument_list|>
name|allocatedContainers
init|=
operator|new
name|LinkedList
argument_list|<>
argument_list|()
decl_stmt|;
name|Iterator
argument_list|<
name|Container
argument_list|>
name|itor
init|=
name|feedContainers
operator|.
name|iterator
argument_list|()
decl_stmt|;
while|while
condition|(
name|itor
operator|.
name|hasNext
argument_list|()
condition|)
block|{
name|Container
name|c
init|=
name|itor
operator|.
name|next
argument_list|()
decl_stmt|;
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|service
operator|.
name|component
operator|.
name|Component
name|component
init|=
name|componentsById
operator|.
name|get
argument_list|(
name|c
operator|.
name|getAllocationRequestId
argument_list|()
argument_list|)
decl_stmt|;
if|if
condition|(
name|component
operator|.
name|getState
argument_list|()
operator|==
name|ComponentState
operator|.
name|FLEXING
condition|)
block|{
name|System
operator|.
name|out
operator|.
name|println
argument_list|(
literal|"Allocated container "
operator|+
name|c
operator|.
name|getId
argument_list|()
argument_list|)
expr_stmt|;
name|allocatedContainers
operator|.
name|add
argument_list|(
name|c
argument_list|)
expr_stmt|;
name|itor
operator|.
name|remove
argument_list|()
expr_stmt|;
block|}
block|}
return|return
name|builder
operator|.
name|allocatedContainers
argument_list|(
name|allocatedContainers
argument_list|)
operator|.
name|build
argument_list|()
return|;
block|}
block|}
block|}
annotation|@
name|Override
specifier|public
name|RegisterApplicationMasterResponse
name|registerApplicationMaster
parameter_list|(
name|String
name|appHostName
parameter_list|,
name|int
name|appHostPort
parameter_list|,
name|String
name|appTrackingUrl
parameter_list|)
block|{
return|return
name|mock
argument_list|(
name|RegisterApplicationMasterResponse
operator|.
name|class
argument_list|)
return|;
block|}
annotation|@
name|Override
specifier|public
name|void
name|unregisterApplicationMaster
parameter_list|(
name|FinalApplicationStatus
name|appStatus
parameter_list|,
name|String
name|appMessage
parameter_list|,
name|String
name|appTrackingUrl
parameter_list|)
block|{
comment|// DO nothing
block|}
block|}
decl_stmt|;
return|return
name|AMRMClientAsync
operator|.
name|createAMRMClientAsync
argument_list|(
name|client1
argument_list|,
literal|1000
argument_list|,
name|this
operator|.
expr|new
name|AMRMClientCallback
argument_list|()
argument_list|)
return|;
block|}
annotation|@
name|Override
specifier|public
name|NMClientAsync
name|createNMClient
parameter_list|()
block|{
name|NMClientAsync
name|nmClientAsync
init|=
name|super
operator|.
name|createNMClient
argument_list|()
decl_stmt|;
name|nmClientAsync
operator|.
name|setClient
argument_list|(
name|mock
argument_list|(
name|NMClient
operator|.
name|class
argument_list|)
argument_list|)
expr_stmt|;
return|return
name|nmClientAsync
return|;
block|}
block|}
return|;
block|}
DECL|method|loadApplicationJson (ServiceContext context, SliderFileSystem fs)
annotation|@
name|Override
specifier|protected
name|void
name|loadApplicationJson
parameter_list|(
name|ServiceContext
name|context
parameter_list|,
name|SliderFileSystem
name|fs
parameter_list|)
throws|throws
name|IOException
block|{
name|context
operator|.
name|application
operator|=
name|application
expr_stmt|;
block|}
comment|/**    *    * @param application The application for the component    * @param id The id for the container    * @param compName The component to which the container is fed    * @return    */
DECL|method|feedContainerToComp (Application application, int id, String compName)
specifier|public
name|Container
name|feedContainerToComp
parameter_list|(
name|Application
name|application
parameter_list|,
name|int
name|id
parameter_list|,
name|String
name|compName
parameter_list|)
block|{
name|ApplicationId
name|applicationId
init|=
name|ApplicationId
operator|.
name|fromString
argument_list|(
name|application
operator|.
name|getId
argument_list|()
argument_list|)
decl_stmt|;
name|ContainerId
name|containerId
init|=
name|ContainerId
operator|.
name|newContainerId
argument_list|(
name|ApplicationAttemptId
operator|.
name|newInstance
argument_list|(
name|applicationId
argument_list|,
literal|1
argument_list|)
argument_list|,
name|id
argument_list|)
decl_stmt|;
name|NodeId
name|nodeId
init|=
name|NodeId
operator|.
name|newInstance
argument_list|(
literal|"localhost"
argument_list|,
literal|1234
argument_list|)
decl_stmt|;
name|Container
name|container
init|=
name|Container
operator|.
name|newInstance
argument_list|(
name|containerId
argument_list|,
name|nodeId
argument_list|,
literal|"localhost"
argument_list|,
name|Resource
operator|.
name|newInstance
argument_list|(
literal|100
argument_list|,
literal|1
argument_list|)
argument_list|,
name|Priority
operator|.
name|newInstance
argument_list|(
literal|0
argument_list|)
argument_list|,
literal|null
argument_list|)
decl_stmt|;
name|long
name|allocateId
init|=
name|context
operator|.
name|scheduler
operator|.
name|getAllComponents
argument_list|()
operator|.
name|get
argument_list|(
name|compName
argument_list|)
operator|.
name|getAllocateId
argument_list|()
decl_stmt|;
name|container
operator|.
name|setAllocationRequestId
argument_list|(
name|allocateId
argument_list|)
expr_stmt|;
synchronized|synchronized
init|(
name|feedContainers
init|)
block|{
name|feedContainers
operator|.
name|add
argument_list|(
name|container
argument_list|)
expr_stmt|;
block|}
return|return
name|container
return|;
block|}
DECL|method|flexComponent (String compName, long numberOfContainers)
specifier|public
name|void
name|flexComponent
parameter_list|(
name|String
name|compName
parameter_list|,
name|long
name|numberOfContainers
parameter_list|)
throws|throws
name|IOException
block|{
name|ClientAMProtocol
operator|.
name|ComponentCountProto
name|componentCountProto
init|=
name|ClientAMProtocol
operator|.
name|ComponentCountProto
operator|.
name|newBuilder
argument_list|()
operator|.
name|setName
argument_list|(
name|compName
argument_list|)
operator|.
name|setNumberOfContainers
argument_list|(
name|numberOfContainers
argument_list|)
operator|.
name|build
argument_list|()
decl_stmt|;
name|ClientAMProtocol
operator|.
name|FlexComponentsRequestProto
name|requestProto
init|=
name|ClientAMProtocol
operator|.
name|FlexComponentsRequestProto
operator|.
name|newBuilder
argument_list|()
operator|.
name|addComponents
argument_list|(
name|componentCountProto
argument_list|)
operator|.
name|build
argument_list|()
decl_stmt|;
name|context
operator|.
name|clientAMService
operator|.
name|flexComponents
argument_list|(
name|requestProto
argument_list|)
expr_stmt|;
block|}
DECL|method|getComponent (String compName)
specifier|public
name|Component
name|getComponent
parameter_list|(
name|String
name|compName
parameter_list|)
block|{
return|return
name|context
operator|.
name|scheduler
operator|.
name|getAllComponents
argument_list|()
operator|.
name|get
argument_list|(
name|compName
argument_list|)
return|;
block|}
DECL|method|waitForDependenciesSatisfied (String compName)
specifier|public
name|void
name|waitForDependenciesSatisfied
parameter_list|(
name|String
name|compName
parameter_list|)
throws|throws
name|TimeoutException
throws|,
name|InterruptedException
block|{
name|GenericTestUtils
operator|.
name|waitFor
argument_list|(
operator|new
name|Supplier
argument_list|<
name|Boolean
argument_list|>
argument_list|()
block|{
annotation|@
name|Override
specifier|public
name|Boolean
name|get
parameter_list|()
block|{
return|return
name|context
operator|.
name|scheduler
operator|.
name|getAllComponents
argument_list|()
operator|.
name|get
argument_list|(
name|compName
argument_list|)
operator|.
name|areDependenciesReady
argument_list|()
return|;
block|}
block|}
argument_list|,
literal|1000
argument_list|,
literal|20000
argument_list|)
expr_stmt|;
block|}
DECL|method|waitForNumDesiredContainers (String compName, int numDesiredContainers)
specifier|public
name|void
name|waitForNumDesiredContainers
parameter_list|(
name|String
name|compName
parameter_list|,
name|int
name|numDesiredContainers
parameter_list|)
throws|throws
name|TimeoutException
throws|,
name|InterruptedException
block|{
name|GenericTestUtils
operator|.
name|waitFor
argument_list|(
operator|new
name|Supplier
argument_list|<
name|Boolean
argument_list|>
argument_list|()
block|{
annotation|@
name|Override
specifier|public
name|Boolean
name|get
parameter_list|()
block|{
return|return
name|context
operator|.
name|scheduler
operator|.
name|getAllComponents
argument_list|()
operator|.
name|get
argument_list|(
name|compName
argument_list|)
operator|.
name|getNumDesiredInstances
argument_list|()
operator|==
name|numDesiredContainers
return|;
block|}
block|}
argument_list|,
literal|1000
argument_list|,
literal|20000
argument_list|)
expr_stmt|;
block|}
block|}
end_class

end_unit

